# pg_lakehouse

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docker/: Dockerfile.dev  docker-compose.yml  docker-entrypoint.sh
pg_lakehouse_iceberg/: CMakeLists.txt  Makefile  README.md  pg_lakehouse_iceberg.control
pg_lakehouse_iceberg/sql/: iceberg_basic.sql  pg_lakehouse_iceberg--0.1.0.sql
pg_lakehouse_iceberg/src/: handler.c  iceberg_am.c  iceberg_bridge.cpp  iceberg_bridge.h
pg_lakehouse_iceberg/src/bridge/: iceberg_bridge.cpp  iceberg_bridge.h  iceberg_bridge_internal.h
pg_lakehouse_iceberg/src/catalog/: catalog_bridge.cpp  catalog_bridge.h  pg_catalog.cpp  pg_catalog.h
pg_lakehouse_iceberg/src/io/: file_io.c  file_io.h  s3_io.c
pg_lakehouse_iceberg/src/operations/: commit_ops.c  commit_ops.h  scan_ops.c  scan_ops.h  table_ops.c  table_ops.h  write_ops.c  write_ops.h
tools/: README.md
